# initception

./: .gitignore  Cargo.toml
libinitception/: Cargo.toml
libinitception/proto/: application_interface.proto
libinitception/src/: app.rs  app_interface.rs  app_manager_interface.rs  application_events.rs  build.rs  config.rs  initrc.rs  lib.rs
libinitception/src/src_gen/: application_interface.rs  application_interface_ttrpc.rs
src/: build.rs  client.rs  common.rs  config.rs  context.rs  device.rs  error.rs  init_main.rs  initception.rs  initrc.rs  launcher.rs  lib.rs  main.rs  mount.rs  network.rs  process.rs  property.rs  property_zenoh.rs  server.rs  sysfs_walker.rs  ueventd.rs  userids.rs  uventrc_parser.rs  zygote.rs
src/application/: app.rs  app_interface.rs  config.rs  mod.rs
src/application/src_gen/: mod.rs
src/protocols/: application_interface.proto
src/servers/: application_client.rs  lifecycle.rs  mod.rs
