[package]
name = "initception"
version = "0.1.0"
authors = ["Sojan James <Sojan.James@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "init"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
nix = "0.16.0"
ipc-channel = "0.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
caps = "0.3.3"
#unshare modified to build on aarch64
unshare = { git = "https://github.com/sjames/unshare.git" }
getopts = "0.2.21"
futures = "0.3"
futures-util = "0.3.4"
tokio = { version = "0.2.9", features = ["full"] }
toml = "0.5"
either = {version = "1.5", features = ["serde"]}
petgraph = "0.4"
tracing = "0.1"
tracing-subscriber = "0.1.6"
failure = "0.1"
failure_derive = "0.1"
tokio-serde = "0.6"
tokio-util = {version = "0.2", features = ["codec"]}
rtnetlink = "0.2"
ipnetwork = "0.16.0"
# Lazy static is needed only for the client. Remember to move this when moving the client library to its own crate
lazy_static = "1.4"
rand_core = "0.5"
rand = {version = "0.7.3", features = ["small_rng"]}
netlink-proto = "0.2"
netlink-sys = "0.2"
netlink-packet = "0.1"
walkdir = "2"
libc = "0.2"
zenoh = "0.5.0-beta.5"
protobuf = "2.8.0"
async-trait = "0.1.31"
ttrpc = { version = "0.4", features = ["async"] }



[build-dependencies]
ttrpc-codegen = "0.1.2"


# Mostly for ttrpc codegen
[dev-dependencies]
protobuf = "2.8.0"
bytes = "0.4.11"
libc = "0.2.59"
byteorder = "1.3.2"
log = "0.4.6"
simple-logging = "2.0.2"
nix = "0.16.1"
ttrpc = { version = "0.4", features = ["async"] }
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "0.2", features = ["signal", "time"] }
async-trait = "0.1.31"

[profile.release]
lto = true

