[package]
name = "initception"
version = "0.1.0"
authors = ["Sojan James <Sojan.James@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "init"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
nix = "0.16.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
caps = "0.3.3"
#unshare modified to build on aarch64
unshare = { git = "https://github.com/sjames/unshare.git" }
getopts = "0.2.21"
futures = "0.3"
futures-util = "0.3.4"
tokio = {version = "1.4.0", features = ["full"]}
toml = "0.5"
either = {version = "1.5", features = ["serde"]}
petgraph = "0.4"
tracing = "0.1"
tracing-subscriber = "0.1.6"
tokio-serde = "0.8"
tokio-util = {version = "0.6.7", features = ["codec"]}
rtnetlink = "0.8.0"
ipnetwork = "0.16.0"
# Lazy static is needed only for the client. Remember to move this when moving the client library to its own crate
lazy_static = "1.4"
rand_core = "0.5"
rand = {version = "0.7.3", features = ["small_rng"]}
netlink-proto = "0.2"
netlink-sys = "0.2"
netlink-packet = "0.1"
walkdir = "2"
libc = "0.2"
protobuf = "2.8.0"
async-trait = "0.1.31"
thiserror = "1.0"
regex = "1.4"
someip = {git = "https://github.com/sjames/someip.git"}
someip_derive = {git = "https://github.com/sjames/someip.git"}
libinitception = { path="./libinitception"}

[profile.release]
lto = true

