[package]
name = "libinitception"
version = "0.1.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ttrpc = { git = "https://github.com/sjames/ttrpc-rust.git", features = ["async"] }
protobuf = "2.8.0"
async-trait = "0.1.31"
serde = { version = "1", features = ["derive"] }
toml = "0.5"


[build-dependencies]
ttrpc-codegen = "0.1.2"

