[package]
name = "libinitception"
version = "0.2.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
serde = { version = "1", features = ["derive"] }
serde_with = "1.9.4"
toml = "0.5"
thiserror = "1.0"
futures = "0.3"
someip = {git = "https://github.com/sjames/someip.git"}
someip_derive = {git = "https://github.com/sjames/someip.git"}
#someip = {path = "../../someip"}
#someip_derive = {path = "../../someip/generator_macros"}



